feat: grouping and detailed descs to the config file